--- a/index.html
+++ b/index.html
@@ -1050,7 +1050,7 @@
                 </div>
                 
                 <div class="cert-detail">
-                    <span class="cert-label">Date of Completion:</span> 18th Spetember 2025
+                    <span class="cert-label">Date of Completion:</span> 18th September 2025
                 </div>
                 
                 <div class="cert-detail">
@@ -1268,4 +1268,5 @@
         </footer>
     </div>
 </body>
+
 </html>
